@@ -92,7 +92,6 @@ typedef struct
     int lcd_rate;       // synched OSC2 (hw1) or OSC3 (hw2)
 	int hw_protect;		// HW protection
 	int	recv_file;		// receive file enabled/disabled
-	int timeout;		// link timeout (direct file)
     
 } Ti68kParameters;
 
