@@ -5,6 +5,7 @@ SubVersion: $Id$
 	- [kevin] $2130: complete HW4 images to 8 MB
 	- [kevin] $2136: fixed NULL dereference in filesel.c
 	- [roms]  $2140: added TiGroup file support (in sending only)
+	- [roms]  $2142: fixed wrong timeout value (2 variables, 1 (mis-)used)
 		=> Not released yet.
 
 - 10/05/2006, version 2.81:
